deployment/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  labels:
    app: guestbook-ui
spec:
  rules:
    - host: guestbook-ui.verus-mxie-devops.devops.threatdeterrence.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
